--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "eslint": "7.11.0",
     "prettier": "2.1.2"
   },
-  "devDependencies": {
+  "dependencies": {
     "babel-eslint": "10.1.0",
     "eslint": "7.11.0",
     "eslint-config-prettier": "6.13.0",
