--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "lint:file": "eslint --fix"
   },
   "dependencies": {
-    "babel-eslint": "10.1.0",
-    "eslint": "7.32.0",
+    "@babel/eslint-parser": "7.17.0",
+    "eslint": "8.9.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-simple-import-sort": "7.0.0",
-    "prettier": "2.4.1"
+    "prettier": "2.5.1"
   }
 }
