--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-simple-import-sort": "7.0.0",
     "prettier": "2.5.1"
+  },
+  "release": {
+    "branches": "main"
   }
 }
