--- a/package.json
+++ b/package.json
@@ -23,8 +23,14 @@
     "lint:fix": "eslint --fix .",
     "lint:file": "eslint --fix"
   },
+  "peerDependencies": {
+    "typescript": "4.5.5"
+
+  },
   "dependencies": {
     "@babel/eslint-parser": "7.17.0",
+    "@typescript-eslint/eslint-plugin": "5.12.0",
+    "@typescript-eslint/parser": "5.12.0",
     "eslint": "8.9.0",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-prettier": "4.0.0",
